--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css", "./node_modules/bootstrap/dist/css/bootstrap.min.css"],
+            "styles": [
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+            ],
             "scripts": [],
             "es5BrowserSupport": true
           },
