--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.6.11",
     "jwt-decode": "^2.2.0",
     "rxjs": "~6.3.3",
+    "stacktrace-js": "^2.0.2",
     "tslib": "^1.13.0",
     "zone.js": "~0.8.26"
   },
@@ -35,6 +36,7 @@
     "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
+    "@types/stacktrace-js": "^2.0.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
